kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: employee-app

spec:
  selector:
    app: mysql

  ports:
    - port: 3306
      targetPort: 3306

  clusterIP: None
