kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-ingress
  namespace: employee-app

spec:
  ingressClassName: nginx

  rules:
    - host: employee.local

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: frontend-service

                port:
                  number: 80
